mypyc/test-data/run-base64.test
[case testAllBase64Features_librt_experimental]
from typing import Any
import base64
import binascii

from librt.base64 import b64encode, b64decode

from testutil import assertRaises

def test_encode_basic() -> None:
    assert b64encode(b"x") == b"eA=="

    with assertRaises(TypeError):
        b64encode(bytearray(b"x"))

def check_encode(b: bytes) -> None:
     assert b64encode(b) == getattr(base64, "b64encode")(b)

def test_encode_different_strings() -> None:
    for i in range(256):
        check_encode(bytes([i]))
        check_encode(bytes([i]) + b"x")
        check_encode(bytes([i]) + b"xy")
        check_encode(bytes([i]) + b"xyz")
        check_encode(bytes([i]) + b"xyza")
        check_encode(b"x" + bytes([i]))
        check_encode(b"xy" + bytes([i]))
        check_encode(b"xyz" + bytes([i]))
        check_encode(b"xyza" + bytes([i]))

    b = b"a\x00\xb7" * 1000
    for i in range(1000):
        check_encode(b[:i])

    for b in b"", b"ab", b"bac", b"1234", b"xyz88", b"abc" * 200:
        check_encode(b)

def test_encode_wrapper() -> None:
    enc: Any = b64encode
    assert enc(b"x") == b"eA=="

    with assertRaises(TypeError):
        enc()

    with assertRaises(TypeError):
        enc(b"x", b"y")

def test_decode_basic() -> None:
    assert b64decode(b"eA==") == b"x"

    with assertRaises(TypeError):
        b64decode(bytearray(b"eA=="))

    for non_ascii in "\x80", "foo\u100bar", "foo\ua1234bar":
        with assertRaises(ValueError):
            b64decode(non_ascii)

def check_decode(b: bytes, encoded: bool = False) -> None:
     if encoded:
         enc = b
     else:
         enc = b64encode(b)
     assert b64decode(enc) == getattr(base64, "b64decode")(enc)
     if getattr(enc, "isascii")():  # Test stub has no "isascii"
        enc_str = enc.decode("ascii")
        assert b64decode(enc_str) == getattr(base64, "b64decode")(enc_str)

def test_decode_different_strings() -> None:
    for i in range(256):
        check_decode(bytes([i]))
        check_decode(bytes([i]) + b"x")
        check_decode(bytes([i]) + b"xy")
        check_decode(bytes([i]) + b"xyz")
        check_decode(bytes([i]) + b"xyza")
        check_decode(b"x" + bytes([i]))
        check_decode(b"xy" + bytes([i]))
        check_decode(b"xyz" + bytes([i]))
        check_decode(b"xyza" + bytes([i]))

    b = b"a\x00\xb7" * 1000
    for i in range(1000):
        check_decode(b[:i])

    for b in b"", b"ab", b"bac", b"1234", b"xyz88", b"abc" * 200:
        check_decode(b)

def is_base64_char(x: int) -> bool:
    c = chr(x)
    return ('a' <= c <= 'z') or ('A' <= c <= 'Z') or ('0' <= c <= '9') or c in '+/='

def test_decode_with_non_base64_chars() -> None:
    # For stdlib compatibility, non-base64 characters should be ignored.

    # Invalid characters as a suffix use a fast path.
    check_decode(b"eA== ", encoded=True)
    check_decode(b"eA==\n", encoded=True)
    check_decode(b"eA== \t\n", encoded=True)
    check_decode(b"\n", encoded=True)

    check_decode(b" e  A = = ", encoded=True)

    # Special case: Two different encodings of the same data
    check_decode(b"eAa=", encoded=True)
    check_decode(b"eAY=", encoded=True)

    for x in range(256):
        if not is_base64_char(x):
            b = bytes([x])
            check_decode(b, encoded=True)
            check_decode(b"eA==" + b, encoded=True)
            check_decode(b"e" + b + b"A==", encoded=True)
            check_decode(b"eA=" + b + b"=", encoded=True)

def check_decode_error(b: bytes, ignore_stdlib: bool = False) -> None:
    if not ignore_stdlib:
        with assertRaises(binascii.Error):
            getattr(base64, "b64decode")(b)

    # The raised error is different, since librt shouldn't depend on binascii
    with assertRaises(ValueError):
        b64decode(b)

def test_decode_with_invalid_padding() -> None:
    check_decode_error(b"eA")
    check_decode_error(b"eA=")
    check_decode_error(b"eHk")
    check_decode_error(b"eA = ")

    # Here stdlib behavior seems nonsensical, so we don't try to duplicate it
    check_decode_error(b"eA=a=", ignore_stdlib=True)

def test_decode_with_extra_data_after_padding() -> None:
    check_decode(b"=", encoded=True)
    check_decode(b"==", encoded=True)
    check_decode(b"===", encoded=True)
    check_decode(b"====", encoded=True)
    check_decode(b"eA===", encoded=True)
    check_decode(b"eHk==", encoded=True)
    check_decode(b"eA==x", encoded=True)
    check_decode(b"eHk=x", encoded=True)
    check_decode(b"eA==abc=======efg", encoded=True)

def test_decode_wrapper() -> None:
    dec: Any = b64decode
    assert dec(b"eA==") == b"x"

    with assertRaises(TypeError):
        dec()

    with assertRaises(TypeError):
        dec(b"x", b"y")

[case testBase64FeaturesNotAvailableInNonExperimentalBuild_librt_base64]
# This also ensures librt.base64 can be built without experimental features
import librt.base64

def test_b64encode_not_available() -> None:
    assert not hasattr(librt.base64, "b64encode")

[case testBase64UsedAtTopLevelOnly_librt_experimental]
from librt.base64 import b64encode

# The only reference to b64encode is at module top level
encoded = b64encode(b"x")

def test_top_level_only_encode() -> None:
    assert encoded == b"eA=="
